--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,63 +1,3 @@
-@article{Moghimi2018a,
-abstract = {{\textcopyright} 2013 IEEE. Hyperspectral imaging is becoming an increasingly popular tool for high-throughput plant phenotyping, because it provides remarkable insights about the health status of plants. Feature selection is a key component in a hyperspectral image analysis, largely because a significant portion of spectral features are redundant and/or irrelevant, depending on the desired application. This paper presents an ensemble feature selection method to identify the most informative spectral features for practical applications in plant phenotyping. The hyperspectral data set contained the images of four wheat lines, each with a control and a salt (NaCl) treatment. To rank spectral features, six feature selection methods were used as the base for the ensemble: correlation-based feature selection, ReliefF, sequential feature selection, support vector machine-recursive feature elimination (SVM-RFE), LASSO logistic regression, and random forest. The best results were achieved by the ensemble of ReliefF, SVM-RFE, and random forest, which drastically reduced the dimension of the hyperspectral data set from 215 to 15 features, while improving the accuracy in classifying the salt-treated vegetation pixels from the control pixels by 8.5{\%}. To transform the hyperspectral data set into a multispectral data set, six wavelengths as the center of broad multispectral bands around the most prominent features were determined by a clustering algorithm. The result of salt tolerance assessment of the four wheat lines using the derived multispectral data set was similar to that of the hyperspectral data set. This demonstrates that the proposed feature selection pipeline can be utilized for determining the most informative features and can be a valuable tool in the development of tailored multispectral cameras.},
-author = {Moghimi, Ali and Yang, Ce and Marchetto, Peter M.},
-doi = {10.1109/ACCESS.2018.2872801},
-file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Marchetto - 2018 - Ensemble Feature Selection for Plant Phenotyping A Journey from Hyperspectral to Multispectral Imag(3).pdf:pdf},
-issn = {21693536},
-journal = {IEEE Access},
-keywords = {Band selection,classification,ensemble feature selection,hyperspectral imaging,machine learning,multispectral imging,plant phenotyping,salt stress,wheat},
-pages = {56870--56884},
-publisher = {Institute of Electrical and Electronics Engineers Inc.},
-title = {{Ensemble Feature Selection for Plant Phenotyping: A Journey from Hyperspectral to Multispectral Imaging}},
-volume = {6},
-year = {2018}
-}
-@article{Moghimi2019,
-abstract = {Crop production needs to increase in a sustainable manner to meet the growing global demand for food. To identify crop varieties with high yield potential, plant scientists and breeders evaluate the performance of hundreds of lines in multiple locations over several years. To facilitate the process of selecting advanced varieties, an automated framework was developed in this study. A hyperspectral camera was mounted on an unmanned aerial vehicle to collect aerial imagery with high spatial and spectral resolution. Aerial images were captured in two consecutive growing seasons from three experimental yield fields composed of hundreds experimental plots (1x2.4 meter), each contained a single wheat line. The grain of more than thousand wheat plots was harvested by a combine, weighed, and recorded as the ground truth data. To leverage the high spatial resolution and investigate the yield variation within the plots, images of plots were divided into sub-plots by integrating image processing techniques and spectral mixture analysis with the expert domain knowledge. Afterwards, the sub-plot dataset was divided into train, validation, and test sets using stratified sampling. Subsequent to extracting features from each sub-plot, deep neural networks were trained for yield estimation. The coefficient of determination for predicting the yield of the test dataset at sub-plot scale was 0.79 with root mean square error of 5.90 grams. In addition to providing insights into yield variation at sub-plot scale, the proposed framework can facilitate the process of high-throughput yield phenotyping as a valuable decision support tool. It offers the possibility of (i) remote visual inspection of the plots, (ii) studying the effect of crop density on yield, and (iii) optimizing plot size to investigate more lines in a dedicated field each year.},
-archivePrefix = {arXiv},
-arxivId = {1906.09666},
-author = {Moghimi, Ali and Yang, Ce and Anderson, James A.},
-eprint = {1906.09666},
-file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Anderson - 2019 - Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat(2).pdf:pdf},
-journal = {arXiv preprint, arXiv:1906.09666 [cs.CV].},
-title = {{Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat}},
-url = {http://arxiv.org/abs/1906.09666},
-year = {2019}
-}
-@article{Moghimi2011,
-abstract = {Viscoelastic behaviour of some commercial sweet cherry cultivars of Iran has been studied in current research. For this purpose, stress relaxation test was conducted on five cultivars of sweet cherry including Siah Mashhad, Abarde, Victoria, Dovom Ras and Tak Dane. Two common models (Generalised Maxwell model and Peleg model) were fitted to the experimental data. Both models could describe stress relaxation behaviour of cherries (R 2 =0.99), but Generalised Maxwell model had lower root mean square error (RMSE) than Peleg model. Based on analysis of stress relaxation data using models constants, Tak Dane exhibited more solid properties, while Victoria showed less elastic behaviour than other cultivars. The results revealed that relaxation ratio (R{\%}) and the area under the stress relaxation curve could be effective alternative to models with easier mathematical procedure. {\textcopyright} 2011 The Authors. International Journal of Food Science and Technology {\textcopyright} 2011 Institute of Food Science and Technology.},
-author = {Moghimi, Ali and Saiedirad, Mohammad Hosaien and Moghadam, Ebrahim Ganji},
-doi = {10.1111/j.1365-2621.2011.02563.x},
-file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Saiedirad, Moghadam - 2011 - Interpretation of viscoelastic behaviour of sweet cherries using rheological models.pdf:pdf},
-issn = {09505423},
-journal = {International Journal of Food Science and Technology},
-keywords = {Maxwell model,Peleg model,Stress relaxation,Sweet cherry,Viscoelastic behaviour},
-number = {4},
-pages = {855--861},
-title = {{Interpretation of viscoelastic behaviour of sweet cherries using rheological models}},
-volume = {46},
-year = {2011}
-}
-@article{Moghimi2011a,
-author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Abbaspour-Fard, Mohammad H.},
-doi = {10.1111/j.1745-4530.2009.00547.x},
-file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2011 - Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations.pdf:pdf},
-issn = {01458876},
-journal = {Journal of Food Process Engineering},
-number = {5},
-pages = {1759--1774},
-title = {{Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations}},
-volume = {34},
-year = {2011}
-}
-@article{Moghimi2018,
-author = {Moghimi, Ali and Yang, Ce and Miller, Marisa E. and Kianian, Shahryar F. and Marchetto, Peter M.},
-doi = {10.3389/fpls.2018.01182},
-file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2018 - A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging.pdf:pdf},
-journal = {Frontiers in Plant Science},
-title = {{A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging}},
-year = {2018}
-}
 @article{Moghimi2010,
 abstract = {Visible and near infrared spectroscopic (Vis/NIRS) techniques have shown promise as rapid and non-destructive tools to evaluate the various internal quality attributes of fruits and vegetables. The objective of this study was to develop a calibration model for prediction of soluble solids content and acidity (pH) of kiwifruit by using visible and near infrared spectroscopy and chemometrics. The transmission spectra of kiwifruit were obtained in the wavelength range from 400 to 1000 nm. The effects of different pre-processing methods and spectra treatments, such as standard normal variate transformation (SNV), multiplicative scatter correction (MSC), and median filter and first derivative (D1) were analysed. The prediction models were developed by principal component analysis (PCA) and partial least square regression (PLS). The correlation coefficient for soluble solids content and pH were 0.93, 0.943 and root mean square error of prediction (RMSEP) was 0.259̊Brix and 0.076, respectively. These results were achieved when SNV was utilised in conjunction with median filter and first derivative. This showed the capability of Vis/NIRS and the important role of chemometrics in developing accurate models for the prediction of kiwifruit internal quality characteristics. {\textcopyright} 2010 IAgrE.},
 author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Sarmad, Majid},
@@ -74,7 +14,70 @@ url = {http://dx.doi.org/10.1016/j.biosystemseng.2010.04.002},
 volume = {106},
 year = {2010}
 }
+@article{Moghimi2011,
+abstract = {Viscoelastic behaviour of some commercial sweet cherry cultivars of Iran has been studied in current research. For this purpose, stress relaxation test was conducted on five cultivars of sweet cherry including Siah Mashhad, Abarde, Victoria, Dovom Ras and Tak Dane. Two common models (Generalised Maxwell model and Peleg model) were fitted to the experimental data. Both models could describe stress relaxation behaviour of cherries (R 2 =0.99), but Generalised Maxwell model had lower root mean square error (RMSE) than Peleg model. Based on analysis of stress relaxation data using models constants, Tak Dane exhibited more solid properties, while Victoria showed less elastic behaviour than other cultivars. The results revealed that relaxation ratio (R{\%}) and the area under the stress relaxation curve could be effective alternative to models with easier mathematical procedure. {\textcopyright} 2011 The Authors. International Journal of Food Science and Technology {\textcopyright} 2011 Institute of Food Science and Technology.},
+author = {Moghimi, Ali and Saiedirad, Mohammad Hosaien and Moghadam, Ebrahim Ganji},
+doi = {10.1111/j.1365-2621.2011.02563.x},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Saiedirad, Moghadam - 2011 - Interpretation of viscoelastic behaviour of sweet cherries using rheological models.pdf:pdf},
+issn = {09505423},
+journal = {International Journal of Food Science and Technology},
+keywords = {Maxwell model,Peleg model,Stress relaxation,Sweet cherry,Viscoelastic behaviour},
+number = {4},
+pages = {855--861},
+title = {{Interpretation of viscoelastic behaviour of sweet cherries using rheological models}},
+volume = {46},
+year = {2011}
+}
+@article{Moghimi2011a,
+abstract = {In the last decade, visible and near-infrared spectroscopy (including three modes reflectance, interactance and transmission) has increasingly been utilized in food industry. In this research, transmission mode was used to acquire spectra of kiwifruits, apples and oranges in the range of 400– 1,000 nm, with an emphasis on the effect of fruit orientation on the spectra pattern. For soluble solids content and acidity (pH) to be predicted, various calibration models were developed, based on different combinations of pre- processing techniques. The best model for each characteristic was obtained by standard normal variate transformation in combination with median filter and first derivative. The correlation coefficients for soluble solids content and pH were 0.93 and 0.943, and the root mean square errors of prediction for them were 0.259°Brix and 0.076, respectively. The results indicate that the occur- rence ofpeaks is uniquely the inherent ofthe fruit, independent oforientation. The transmission calibration model for the estimation of fruit constituents could be improved by using proper preprocessing techniques. PRACTICAL},
+author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Abbaspour-Fard, Mohammad H.},
+doi = {10.1111/j.1745-4530.2009.00547.x},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2011 - Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations.pdf:pdf},
+issn = {01458876},
+journal = {Journal of Food Process Engineering},
+number = {5},
+pages = {1759--1774},
+title = {{Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations}},
+volume = {34},
+year = {2011}
+}
+@article{Moghimi2018a,
+abstract = {{\textcopyright} 2013 IEEE. Hyperspectral imaging is becoming an increasingly popular tool for high-throughput plant phenotyping, because it provides remarkable insights about the health status of plants. Feature selection is a key component in a hyperspectral image analysis, largely because a significant portion of spectral features are redundant and/or irrelevant, depending on the desired application. This paper presents an ensemble feature selection method to identify the most informative spectral features for practical applications in plant phenotyping. The hyperspectral data set contained the images of four wheat lines, each with a control and a salt (NaCl) treatment. To rank spectral features, six feature selection methods were used as the base for the ensemble: correlation-based feature selection, ReliefF, sequential feature selection, support vector machine-recursive feature elimination (SVM-RFE), LASSO logistic regression, and random forest. The best results were achieved by the ensemble of ReliefF, SVM-RFE, and random forest, which drastically reduced the dimension of the hyperspectral data set from 215 to 15 features, while improving the accuracy in classifying the salt-treated vegetation pixels from the control pixels by 8.5{\%}. To transform the hyperspectral data set into a multispectral data set, six wavelengths as the center of broad multispectral bands around the most prominent features were determined by a clustering algorithm. The result of salt tolerance assessment of the four wheat lines using the derived multispectral data set was similar to that of the hyperspectral data set. This demonstrates that the proposed feature selection pipeline can be utilized for determining the most informative features and can be a valuable tool in the development of tailored multispectral cameras.},
+author = {Moghimi, Ali and Yang, Ce and Marchetto, Peter M.},
+doi = {10.1109/ACCESS.2018.2872801},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Marchetto - 2018 - Ensemble Feature Selection for Plant Phenotyping A Journey from Hyperspectral to Multispectral Imag(3).pdf:pdf},
+issn = {21693536},
+journal = {IEEE Access},
+keywords = {Band selection,classification,ensemble feature selection,hyperspectral imaging,machine learning,multispectral imging,plant phenotyping,salt stress,wheat},
+pages = {56870--56884},
+publisher = {Institute of Electrical and Electronics Engineers Inc.},
+title = {{Ensemble Feature Selection for Plant Phenotyping: A Journey from Hyperspectral to Multispectral Imaging}},
+volume = {6},
+year = {2018}
+}
+@article{Moghimi2018,
+abstract = {Salinity stress has significant adverse effects on crop productivity and yield. The primary goal of this study was to quantitatively rank salt tolerance in wheat using hyperspectral imaging. Four wheat lines were assayed in a hydroponic system with control and salt treatments (0 and 200mM NaCl). Hyperspectral images were captured one day after salt application when there were no visual symptoms. Subsequent to necessary preprocessing tasks, two endmembers, each representing one of the treatment, were identified in each image using successive volume maximization. To simplify image analysis and interpretation, similarity of all pixels to the salt endmember was calculated by a technique proposed in this study, referred to as vector-wise similarity measurement. Using this approach allowed high-dimensional hyperspectral images to be reduced to one-dimensional gray-scale images while retaining all relevant information. Two methods were then utilized to analyze the gray-scale images: minimum difference of pair assignments and Bayesianmethod. The rankings of bothmethods were similar and consistent with the expected ranking obtained by conventional phenotyping experiments and historical evidence of salt tolerance. This research highlights the application of machine learning in hyperspectral image analysis for phenotyping of plants in a quantitative, interpretable, and non-invasive manner.},
+author = {Moghimi, Ali and Yang, Ce and Miller, Marisa E. and Kianian, Shahryar F. and Marchetto, Peter M.},
+doi = {10.3389/fpls.2018.01182},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2018 - A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging.pdf:pdf},
+journal = {Frontiers in Plant Science},
+title = {{A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging}},
+year = {2018}
+}
+@article{Moghimi2019,
+abstract = {Crop production needs to increase in a sustainable manner to meet the growing global demand for food. To identify crop varieties with high yield potential, plant scientists and breeders evaluate the performance of hundreds of lines in multiple locations over several years. To facilitate the process of selecting advanced varieties, an automated framework was developed in this study. A hyperspectral camera was mounted on an unmanned aerial vehicle to collect aerial imagery with high spatial and spectral resolution. Aerial images were captured in two consecutive growing seasons from three experimental yield fields composed of hundreds experimental plots (1x2.4 meter), each contained a single wheat line. The grain of more than thousand wheat plots was harvested by a combine, weighed, and recorded as the ground truth data. To leverage the high spatial resolution and investigate the yield variation within the plots, images of plots were divided into sub-plots by integrating image processing techniques and spectral mixture analysis with the expert domain knowledge. Afterwards, the sub-plot dataset was divided into train, validation, and test sets using stratified sampling. Subsequent to extracting features from each sub-plot, deep neural networks were trained for yield estimation. The coefficient of determination for predicting the yield of the test dataset at sub-plot scale was 0.79 with root mean square error of 5.90 grams. In addition to providing insights into yield variation at sub-plot scale, the proposed framework can facilitate the process of high-throughput yield phenotyping as a valuable decision support tool. It offers the possibility of (i) remote visual inspection of the plots, (ii) studying the effect of crop density on yield, and (iii) optimizing plot size to investigate more lines in a dedicated field each year.},
+archivePrefix = {arXiv},
+arxivId = {1906.09666},
+author = {Moghimi, Ali and Yang, Ce and Anderson, James A.},
+eprint = {1906.09666},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Anderson - 2019 - Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat(2).pdf:pdf},
+journal = {arXiv preprint, arXiv:1906.09666 [cs.CV].},
+title = {{Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat}},
+url = {http://arxiv.org/abs/1906.09666},
+year = {2019}
+}
 @article{Qiu2019,
+abstract = {Fusarium head blight (FHB) is a devastating disease of wheat worldwide. In addition to reducing the yield of the crop, the causal pathogens also produce mycotoxins that can contaminate the grain. The development of resistant wheat varieties is one of the best ways to reduce the impact of FHB. To develop such varieties, breeders must expose germplasm lines to the pathogen in the field and assess the disease reaction. Phenotyping breeding materials for resistance to FHB is time-consuming, labor-intensive, and expensive when using conventional protocols. To develop a reliable and cost-effective high throughput phenotyping system for assessing FHB in the field, we focused on developing a method for processing color images of wheat spikes to accurately detect diseased areas using deep learning and image processing techniques. Color images of wheat spikes at the milk stage were collected in a shadow condition and processed to construct datasets, which were used to retrain a deep convolutional neural network model using transfer learning. Testing results showed that the model detected spikes very accurately in the images since the coefficient of determination for the number of spikes tallied by manual count and the model was 0.80. The model was assessed, and the mean average precision for the testing dataset was 0.9201. On the basis of the results for spike detection, a new color feature was applied to obtain the gray image of each spike and a modified region-growing algorithm was implemented to segment and detect the diseased areas of each spike. Results showed that the region growing algorithm performed better than the K-means and Otsu's method in segmenting diseased areas. We demonstrated that deep learning techniques enable accurate detection of FHB in wheat based on color image analysis, and the proposed method can effectively detect spikes and diseased areas, which improves the efficiency of the FHB assessment in the field.},
 author = {Qiu, Ruicheng and Yang, Ce and Moghimi, Ali and Zhang, Man and Steffenson, Brian},
 doi = {10.20944/preprints201910.0056.v1},
 file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Qiu et al. - 2019 - Detection of Fusarium Head Blight in Wheat Using a Deep Neural Network and Color Imaging.pdf:pdf},
@@ -83,15 +86,7 @@ keywords = {color imaging,deep neural network,fusarium head blight disease},
 number = {October},
 pages = {1--19},
 title = {{Detection of Fusarium Head Blight in Wheat Using a Deep Neural Network and Color Imaging}},
-year = {2019}
-}
-@phdthesis{Moghimi2019a,
-author = {Moghimi, Ali},
-file = {:C$\backslash$:/Users/Ali/Google Drive (moghi005@umn.edu)/Minnesota/Research/Dissertation/Dissertation Chapters/Moghimi{\_}umn{\_}0130E{\_}20064.pdf:pdf},
-number = {February},
-school = {Retrieved from the University of Minnesota Digital Conservancy},
-title = {{Integrating Hyperspectral Imaging and Artificial Intelligence to Develop Automated Frameworks for High-throughput Phenotyping in Wheat}},
-url = {http://hdl.handle.net/11299/202435},
+url = {https://www.mdpi.com/2072-4292/11/22/2658/htm},
 year = {2019}
 }
 @inproceedings{Moghimi2019,
